# ProyectosCodespace

./: CMakeLists.txt  README.md  multi-projects.code-workspace
.cache/clangd/index/: Ahorcado.cpp.8781E5C38337A4A1.idx  Ahorcado.hpp.7B1115822FD1667D.idx  (+10 more)
ejemplo1/: CMakeLists.txt  main.cpp
ejemplo1/include/: clasepordefecto.hpp
ejemplo1/src/: clasepordefecto.cpp
juegos/: CMakeCache.txt  CMakeLists.txt  Justificacion_Proyecto_Final.docx  Makefile  cmake_install.cmake  compile_commands.json  main.cpp
juegos/include/: Ahorcado.hpp  GestorArchivo.hpp  Juego.hpp  MenuPrincipal.hpp  Parejas.hpp
juegos/juegos/: Makefile  cmake_install.cmake
juegos/src/: Ahorcado.cpp  GestorArchivo.cpp  Juego.cpp  MenuPrincipal.cpp  Parejas.cpp
manejo_archivos/: CMakeLists.txt  main  main.cpp
manejo_archivos/include/: Solution.hpp
manejo_archivos/src/: Solution.cpp
parcial/: CMakeLists.txt  main.cpp
parcial/include/: Arma.hpp  AtaqueFuerte.hpp  AtaqueSuave.hpp  Nave.hpp
parcial/src/: Arma.cpp  AtaqueFuerte.cpp  AtaqueSuave.cpp  Nave.cpp
parcialmateo/: CMakeLists.txt  main.cpp
parcialmateo/include/: Solution.hpp
taller/: CMakeLists.txt  main.cpp
taller/include/: Cuenta.hpp  Usuario.hpp  clasepordefecto.hpp
taller/src/: Cuenta.cpp  Usuario.cpp  clasepordefecto.cpp
taller3/: CMakeLists.txt  main.cpp
taller3/include/: Asistente.hpp  CargarMaterial.hpp  Dvd.hpp  Libro.hpp  Material.hpp  Persona.hpp  Registro.hpp  Revista.hpp
taller3/src/: Asistente.cpp  CargarMaterial.cpp  Dvd.cpp  Libro.cpp  Material.cpp  Persona.cpp  Registro.cpp  Revista.cpp
(+252 files in other folders)
